# ConfigWatcher

./: Cargo.toml  README.md  file.json
conf_watcher/: Cargo.toml
conf_watcher/examples/: main.rs  verbose_automatic_updated.rs  verbose_manual.rs
conf_watcher/src/: auto_updated.rs  file_format.rs  lib.rs  watched_file.rs  watcher.rs
conf_watcher_macros/: Cargo.toml
conf_watcher_macros/src/: lib.rs
conf_watcher_v2/: Cargo.toml
conf_watcher_v2/src/: file_watcher.rs  lib.rs  watcher.rs
