[package]
name = "conf_watcher"
version = "0.1.2"
edition = "2024"

description = "A library for auto-reloading configuration files in Rust"
license = "MIT"
repository = "https://github.com/rafaelxky/conf_watcher"
readme = "README.md"
keywords = ["config", "watcher", "hot-reload"]
categories = ["config"]

[dependencies]
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.0"
toml = "0.9.8"

[lib]
name = "conf_watcher"
path = "src/lib.rs" 
