[package]
name = "conf_watcher"
version = "0.1.3"
edition = "2024"

description = "A library for auto-reloading configuration files in Rust"
license = "MIT"
repository = "https://github.com/rafaelxky/conf_watcher"
readme = "README.md"
keywords = ["config", "watcher", "hot-reload"]
categories = ["config"]

[dependencies]
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"], optional = false }
serde_json = {version = "1.0.145", optional = true }
serde_yaml = {version = "0.9.0", optional = true }
toml = {version = "0.9.8", optional = true }

[lib]
name = "conf_watcher"
path = "src/lib.rs" 

[features]
json_file = ["serde_json"]
toml_file = ["toml"]
yaml_file = ["serde_yaml"]
