[package]
name = "conf_watcher_v2"
version = "0.1.0"
edition = "2024"

[lib]
name = "conf_watcher"
path = "src/lib.rs" 

[dependencies]
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"], optional = false }
serde_json = {version = "1.0.145", optional = false }
serde_yaml = {version = "0.9.0", optional = false }
toml = {version = "0.9.8", optional = false }

[features]
json = []
toml = []
yaml = []